--- a/index copy.html
+++ b/index copy.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 
-<head>
+<h1>Hometown Map Branch</h1>
+	
 	<meta charset=utf-8 />
 	<title>Web Page Template</title>
 	<meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
